--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* --- HEADER REFORMADO (Copia desde aquí) --- */
+html { scroll-behavior: smooth; }
 header { 
     padding: 15px 5%; 
     position: fixed; /* Ahora siempre flota sobre las fotos */
@@ -55,6 +55,9 @@ main { width: 100%; }
     gap: 10px; 
     width: 100%; 
     height: 45vh; /* Antes era 60vh o 70vh. Al bajarlo a 45 se ve más corto */
+}
+section {
+    scroll-margin-top: 80px; 
 }
 
 .galeria { flex: 1; height: 100%; overflow: hidden; position: relative; }
