--- a/style.css
+++ b/style.css
@@ -31,11 +31,13 @@ body {
     margin-bottom: 20px;
 }
 
-.splash-content p {
-    font-weight: 400;
-    letter-spacing: 10px;
-    font-size: 0.7rem;
-    opacity: 0.8;
+.splash-content {
+    background: rgba(255, 255, 255, 0.05); /* Blanco casi invisible */
+    backdrop-filter: blur(8px); /* Desenfoque del fondo */
+    -webkit-backdrop-filter: blur(8px);
+    padding: 40px 60px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 2px;
 }
 
 /* --- HEADER (MENÚ FIJO) --- */
